tests/ui/const-generics/adt_const_params/nested_bad_const_param_ty.stderr
error[E0204]: the trait `ConstParamTy_` cannot be implemented for this type
  --> $DIR/nested_bad_const_param_ty.rs:6:10
   |
LL | #[derive(ConstParamTy)]
   |          ^^^^^^^^^^^^
LL |
LL | struct Foo([*const u8; 1]);
   |            -------------- this field does not implement `ConstParamTy_`
   |
note: the `ConstParamTy_` impl for `[*const u8; 1]` requires that `*const u8: ConstParamTy_`
  --> $DIR/nested_bad_const_param_ty.rs:8:12
   |
LL | struct Foo([*const u8; 1]);
   |            ^^^^^^^^^^^^^^

error[E0204]: the trait `ConstParamTy_` cannot be implemented for this type
  --> $DIR/nested_bad_const_param_ty.rs:10:10
   |
LL | #[derive(ConstParamTy)]
   |          ^^^^^^^^^^^^
LL |
LL | struct Foo2([*mut u8; 1]);
   |             ------------ this field does not implement `ConstParamTy_`
   |
note: the `ConstParamTy_` impl for `[*mut u8; 1]` requires that `*mut u8: ConstParamTy_`
  --> $DIR/nested_bad_const_param_ty.rs:12:13
   |
LL | struct Foo2([*mut u8; 1]);
   |             ^^^^^^^^^^^^

error[E0204]: the trait `ConstParamTy_` cannot be implemented for this type
  --> $DIR/nested_bad_const_param_ty.rs:14:10
   |
LL | #[derive(ConstParamTy)]
   |          ^^^^^^^^^^^^
LL |
LL | struct Foo3([fn(); 1]);
   |             --------- this field does not implement `ConstParamTy_`
   |
note: the `ConstParamTy_` impl for `[fn(); 1]` requires that `fn(): ConstParamTy_`
  --> $DIR/nested_bad_const_param_ty.rs:16:13
   |
LL | struct Foo3([fn(); 1]);
   |             ^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0204`.
